automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <table>
     <tr>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>City</th>
+      <th>State</th>
+      <th>2017 estimate</th>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>New York</td>
+      <td>New York</td>
+      <td>8,622,698</td>
     </tr>
     <tr>
       <td></td>
